package com.ilike.strategy.improve;

/**
 * 飞翔的接口
 */
public interface FlyBehavior {

    void fly();
}
